# ros2EM4_Hikvision

./: Makefile  README.md  docker-compose.yml  标定与实施整体方案v1.0.docx
EM4_520/rslidar_catkin_ws/src/collector/: CMakeLists.txt  README.md  package.xml
EM4_520/rslidar_catkin_ws/src/collector/data/: index.csv  stereo_index.csv
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260601/group_1780279953_310265/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260601/group_1780280155_376264/: metadata.csv  metadata.json  prev_cloud_1780280155_098930.pcd
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260601/group_1780281849_647699/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260601/group_1780281864_730117/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260601/single_1780281832_846820/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260609/group_1780972164_408039/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/20260609/group_1780972170_606735/: metadata.csv  metadata.json
EM4_520/rslidar_catkin_ws/src/collector/data/hikvision/photos/20260527/: photos.csv
EM4_520/rslidar_catkin_ws/src/collector/launch/: collector.launch
EM4_520/rslidar_catkin_ws/src/collector/launch/hikvision/: hikvision.launch  hikvision_all.launch  hikvision_collect.launch  hikvision_photo.launch
EM4_520/rslidar_catkin_ws/src/collector/launch/zed/: zed.launch  zed_all.launch  zed_collect.launch
EM4_520/rslidar_catkin_ws/src/collector/scripts/: camera_node.py  collector_node.py
EM4_520/rslidar_catkin_ws/src/collector/scripts/hikvision/: hikvision_collector_node.py  hikvision_node.py  hikvision_photo_node.py
EM4_520/rslidar_catkin_ws/src/collector/scripts/remote_desktop/: run_hikvision_photo_novnc.sh  start_remote_desktop.sh  stop_remote_desktop.sh
EM4_520/rslidar_catkin_ws/src/collector/scripts/zed/: zed_collector_node.py  zed_node.py
ros2_ws/src/camera_driver/: package.xml  setup.py
ros2_ws/src/camera_driver/camera_driver/: hikvision_node.py
ros2_ws/src/camera_driver/config/: camera_info.yaml
ros2_ws/src/camera_driver/launch/: hikvision.launch.py
(+164 files in other folders)
