<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_driver</name>
  <version>0.1.0</version>
  <description>GMSL2 camera (SG8S-AR0820) V4L2 driver for ROS2 Humble.</description>
  <maintainer email="dev@example.com">shen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
