<?xml version="1.0"?>
<package format="2">
  <name>collector</name>
  <version>0.0.1</version>
  <description>Collect synchronized RoboSense LiDAR point clouds and camera images for calibration.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <export>
  </export>
</package>
